--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Amaranth&family=Arsenal&family=Karma:wght@300&family=PT+Serif&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Amaranth&family=Arsenal&family=Karma:wght@300;700&family=PT+Serif&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
     <title>Yummify</title>
   </head>
